--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
   "license": "GPL-3.0-or-later",
   "private": true,
   "scripts": {
-    "parcel:serve": "parcel public/index.html",
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "report": "vue-cli-service build --report",
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build --mode prod",
+    "build:preprod": "vite build --mode preprod",
+    "lint": "eslint src",
+    "lint:fix": "yarn lint --fix",
     "test": "echo \"No tests to run.\""
   },
   "dependencies": {
     "core-js": "^3.6.5",
     "date-fns": "^2.16.1",
     "marked": "^0.6.2",
-    "vue": "^2.6.10",
+    "vue": "2.6.13",
     "vue-clipboard2": "^0.3.0",
     "vue-markdown-loader": "^2.4.1",
     "vue-property-decorator": "^8.3.0",
@@ -50,16 +50,23 @@
     "husky": "^3.1.0",
     "lint-staged": "^8.1.5",
     "prettier": "^1.19.1",
+    "regenerator-runtime": "^0.13.7",
+    "rollup-plugin-visualizer": "^5.5.0",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "typescript": "~3.9.3",
+    "vite": "^2.3.6",
+    "vite-plugin-components": "^0.10.4",
+    "vite-plugin-vue2": "^1.6.2",
     "vue-class-component": "^7.1.0",
     "vue-cli-plugin-axios": "^0.0.4",
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-cli-plugin-webpack-bundle-analyzer": "~2.0.0",
+    "vue-demi": "^0.9.1",
     "vue-template-compiler": "^2.6.10",
+    "vue-tsc": "^0.1.7",
     "vuetify-loader": "^1.2.2",
     "webpack-bundle-analyzer": "^3.9.0",
     "webpack-bundle-tracker": "^0.4.3"
