--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build --mode prod",
     "build:preprod": "vite build --mode preprod",
-    "lint": "eslint src",
+    "lint": "eslint './src/**/*.{ts,js,vue}'",
     "lint:fix": "yarn lint --fix",
     "test": "echo \"No tests to run.\""
   },
